manifests/nginx/envoy-config/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      protocol: TCP
      address: 127.0.0.1
      port_value: 9901
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["service"]
              routes:
              - match:
                  prefix: "/"
                route:
                  weighted_clusters:
                    runtime_key_prefix: routing.traffic_split.helloworld
                    total_weight: 1000
                    clusters:
                      - name: service_hoge
                        weight: 999
                      - name: service_fuga
                        weight: 1
          http_filters:
          - name: envoy.router
  clusters:
  - name: service_hoge
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: service_hoge
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: service-hoge
                port_value: 80
  - name: service_fuga
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: service_fuga
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: service-fuga
                port_value: 80
